# litter

./: .gitignore  README.md  package.xml  setup.py
4_wheel_ros/4_wheel_ros/: my_robot_driver.py
4_wheel_ros/resource/: my_robot.urdf
4_wheel_ros/worlds/: my_world.wbt
bdi_spazza/: CMakeLists.txt  package.xml
bdi_spazza/launch/: launcher.launch.py  launcher.py
bdi_spazza/launch/init/: init_bset.yaml  init_dset.yaml  init_simple_bset.yaml  init_simple_dset.yaml  tmp.txt
bdi_spazza/launch/init_e_puck/: a.out  init_bset.yaml  init_dset.yaml  init_generator.cpp
bdi_spazza/pddl/: generate_pddl_properties.cpp  spazza-domain.pddl
bdi_spazza/pddl/e_puck/: spazza-domain.pddl
bdi_spazza/src/actions/: pickup.cpp  putdown.cpp
bdi_spazza/src/actions/e_puck/: move.cpp  pickup.cpp  putdown.cpp
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bdi_spazza/lib/bdi_spazza/: move  pickup  putdown
install/bdi_spazza/share/bdi_spazza/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/collision_avoidance/lib/collision_avoidance/: my_robot_driver
install/collision_avoidance/share/collision_avoidance/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/litter/lib/litter/: robot_driver
litter/: package.xml  setup.cfg  setup.py
litter/launch/: litter_launcher.py
litter/resource/: supervisor.urdf
litter/worlds/: .litter.wbproj  .litter_world.wbproj
litter/worlds/worlds/: .litter.wbproj  litter.wbt
log/: latest_build  latest_list
my_package/: package.xml  setup.py
my_package/my_package/: my_robot_driver.py
my_package/worlds/: .my_world.wbproj  my_world.wbt
resource/: e_puck.urdf
spazza/: setup.cfg  supervisor_controller.py
spazza/launch/: launcher.launch.py
spazza/spazza/: e_puck_controller.py  supervisor_controller.py
spazza/worlds/: .litter.wbproj  litter.wbt
spazza_interfaces/: CMakeLists.txt
spazza_interfaces/msg/: Position.msg
src/bdi_spazza/: CMakeLists.txt
src/bdi_spazza/launch/: offline_launcher.launch.py  offline_launcher_time.launch.py  online_launcher.launch.py
src/collision_avoidance/: package.xml  setup.cfg  setup.py
src/collision_avoidance/collision_avoidance/: collision_avoidance_driver.py
src/collision_avoidance/resource/: my_robot2.urdf
src/collision_avoidance/worlds/: .my_world.wbproj
src/moving_bdi_spazza/: CMakeLists.txt  package.xml
src/moving_bdi_spazza/launch/: online_launcher_time.launch.py  online_launcher_time_bag.launch.py
src/moving_bdi_spazza/launch/init_e_puck/: init_bset.yaml  init_rrules.yaml  init_rrules_bag.yaml
src/moving_bdi_spazza/pddl/: domain-bag.pddl  domain.pddl
src/moving_spazza/: package.xml  setup.cfg  setup.py
src/moving_spazza/launch/: launcher.launch.py
src/moving_spazza/moving_spazza/: e_puck_2_controller.py  e_puck_controller.py  supervisor_controller.py
src/moving_spazza/resource/: e_puck.urdf  e_puck_2.urdf  supervisor.urdf
src/moving_spazza/worlds/: .moving_litter.wbproj  moving_litter.wbt
src/online_bdi_spazza/: CMakeLists.txt
src/online_bdi_spazza/launch/: online_launcher.launch.py  online_launcher_time.launch.py
src/online_bdi_spazza/launch/init_e_puck/: a.out  generate__rules.cpp  init_bset.yaml  init_bset2.yaml  init_dset.yaml  init_rrules.yaml  init_rrules_time_generated.yaml
src/online_bdi_spazza/launch/init_e_puck/tmp/: tmp.yaml
src/online_bdi_spazza/pddl/e_puck/: spazza-domain.pddl  spazza-domain2.pddl
src/online_bdi_spazza/src/actions/e_puck/: move.cpp  pickup.cpp  putdown.cpp
src/spawn_spazza/: package.xml  setup.cfg  setup.py
src/spawn_spazza/launch/: launcher.launch.py  launcher_time.launch.py
src/spawn_spazza/protos/: RubberDuck.proto
src/spawn_spazza/resource/: e_puck.urdf  supervisor.urdf  supervisor_time.urdf
src/spawn_spazza/spawn_spazza/: e_puck_controller.py  supervisor_controller.py  supervisor_controller_time.py
src/spawn_spazza/worlds/: .spawn_litter.wbproj  spawn_litter.wbt
src/spazza/: setup.py
src/spazza/pddl/: a.out  spazza_domain.pddl
src/spazza/spazza/: test.cpp
src/spazza/worlds/: .litter.wbproj  litter.wbt
src/spazza_interfaces/msg/: Position.msg
src/test_pkg/: setup.cfg  setup.py
src/time_bdi_spazza/: CMakeLists.txt  package.xml
(+91 files in other folders)
